--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "cosmetics_backend",
   "packageManager": "yarn@3.4.1",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "echo 'Build command here'",
+    "prod": "echo 'Production command here'"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -9,5 +15,8 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
